# GenAI-Powered-Document-Summarization-V1

./: README.md  main.py  package-lock.json  pyproject.toml
Backend/: .env.example  .gitignore
Backend/app/: main.py
Backend/app/api/: api.py
Backend/app/api/routes/: entities.py  fact_verification.py  graph.py  query.py  summarization.py
Backend/app/core/: config.py  logger.py
Backend/app/db/: cache.py  mongodb.py  vector_store.py
Backend/app/models/: schema.py
Backend/app/prompts/: extractor.py  fact_verifier.py  graph_builder.py  summarizer_prompts.py
Backend/app/services/: chunking.py  extractor.py  fact_verifier.py  graph_builder.py  ingestion.py  pipeline.py  summarizer.py  vector_store.py
Backend/app/utils/: doc_id.py  hashing.py
Frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
Frontend/public/: index.html
Frontend/src/: App.jsx  index.css  index.jsx
Frontend/src/components/: Layout.jsx  Shared.jsx
Frontend/src/context/: DocumentContext.jsx
Frontend/src/pages/: EntitiesPage.jsx  FactCheckPage.jsx  GraphPage.jsx  HomePage.jsx  QueryPage.jsx  SummaryPage.jsx
Frontend/src/router/: AppRouter.jsx
Frontend/src/services/: api.jsx
