[project]
name = "genai-document-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "boto3==1.42.73",
    "botocore==1.42.73",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "fastapi==0.135.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jmespath==1.1.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.0",
    "langchain-core==1.2.21",
    "langchain-text-splitters==1.1.1",
    "langsmith==0.7.22",
    "neo4j==6.1.0",
    "orjson==3.11.7",
    "packaging==26.0",
    "pdfminer-six==20251230",
    "pdfplumber==0.11.9",
    "pillow==12.1.1",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pymongo==4.16.0",
    "pymupdf==1.27.2.2",
    "pypdfium2==5.6.0",
    "pytesseract==0.3.13",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "regex==2026.2.28",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "s3transfer==0.16.0",
    "six==1.17.0",
    "starlette==1.0.0",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn==0.42.0",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]
